# vida

./: .gitmodules  CMakeLists.txt  README.md
components/input/: CMakeLists.txt
components/input/include/vida/input/: Input.hpp
components/input/src/: Input.cpp
components/renderer2d/include/vida/renderer2d/: Renderer2D.hpp
components/renderer2d/src/: Renderer2D.cpp
components/renderer3d/include/vida/renderer3d/: Camera.hpp  Renderer3D.hpp
components/renderer3d/src/: Camera.cpp  Renderer3D.cpp
core/include/vida/core/: Key.hpp  Model.hpp  MouseButton.hpp  Time.hpp
core/src/: Mesh.cpp  Model.cpp  Time.cpp
examples/: test.c  test.cpp
examples/basic/: main.cpp
include/: vida2d.h  vida2d.hpp
include/vida/: Color.hpp  Engine.hpp  Event.hpp  Game.hpp  Vector.hpp
include/vida/render/: Renderer.hpp  Triangulate.hpp
include/vida2d/: color.h  render.h  status.h  vec.h
include/vida2d/render/: text.hpp
src/: Color.cpp  Engine.cpp  render.c  vida2d.c  vida2d.cpp
src/modules/render/: render.c  render.cpp
src/modules/time/: time.cpp
src/render/: Renderer.cpp  Triangulate.cpp  internal.cpp
src/utils/: color.c
